# analytic_spike_solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: random_network.py  trace_metrics.py
experiments/: __init__.py  bias_population_noise.py
src/analytic_spike_solver/: __init__.py  benchmark.py  bias.py  brian_compare.py  cli.py  config.py  encoders.py  events.py  fixtures.py  metrics.py  monitors.py  numba_accel.py  parallel.py  params.py  plotting.py  random.py  reference.py  residual.py  runner.py  solver.py  sparse.py  stress.py  trace.py  weights.py
src/analytic_spike_solver/analysis/: __init__.py  metrics.py  monitors.py  plotting.py  residual.py  trace.py
src/analytic_spike_solver/core/: __init__.py  config.py  events.py  params.py  random.py  solver.py
src/analytic_spike_solver/generation/: __init__.py  bias.py  encoders.py  weights.py
src/analytic_spike_solver/integrations/: __init__.py  brian_compare.py  numba_accel.py  sparse.py
src/analytic_spike_solver/tools/: __init__.py  benchmark.py  fixtures.py  parallel.py  reference.py  runner.py  stress.py
tests/: __init__.py  test_framework.py  test_reference_and_stress.py  test_solver.py
