[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytic-spike-solver"
version = "0.1.0"
description = "CPU event-streaming solver for dense feedforward spiking networks."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Abhinav Chakravarthy"}
]
keywords = ["spiking-neural-networks", "event-driven", "simulation", "numpy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]
plot = [
  "matplotlib>=3.7",
]
brian = [
  "brian2>=2.5",
]
numba = [
  "numba>=0.58",
]

[project.scripts]
analytic-spike-solver = "analytic_spike_solver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["results"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["F403", "F405"]
